# toyrt

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  output.ppm
src/: main.cpp
src/core/: ray.hpp  tfrt.hpp  vecmath.hpp
src/util/: math.hpp
tests/: CMakeLists.txt  test_main.cpp  test_ray.cpp  test_vecmath.cpp
